--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-<!-- Add your HTML Code here -->
+<html>
+<head>
+<link href="style.css"  type="text/css"rel="stylesheet">
+</head>
+<body>
+  <div class="profileBody">
+<h1> Snehal Gavali</h1>
+<h2> Front end engineer <h2>
+<br>
+    <hr />	
+  <br>
+
+  <strong>Career objective:</strong><br>
+  <p>Contribute to the success and growth of the organization being positive catalyst
+     and essential ingredint in growth process by using my problem solving skills and 
+	 technical expertise-in pursuit of excellence.</p>
+  <br><br>
+   <hr />	
+   <br>
+   
+ 
+  
+<p><strong> STRENGTHS: </strong></p>
+  <ul>
+      <li>Problem solving.</li>
+      <li>Time management.</li>
+    <li>Team player.</li>
+   <li>Presentation.</li>
+
+  </ul>
+  <br>
+  <hr />
+  <br>
+  <p>
+  <strong>Contact Details:</strong><br>
+  mail me at:snehalgavali1236@gmail.com
+  </p>
+  
+  
+   </div>
+</body>
+</html>
